--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -44,7 +44,7 @@
           <ul class="nav navbar-nav navbar-right">
               {% if (user != null) %}
                   <li><a href="#">{{ user.username }}</a></li>
-                  <li><a href="">注销</a></li>
+                  <li><a href="/logout">注销</a></li>
               {% else %}
                   <li><a href="/login">登录</a></li>
                   <li><a href="/regist">注册</a></li>
