--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -26,9 +26,9 @@
     <form action="/add_answer" method="post">
         <div class="form-group">
             <input name="content" type="text" class="form-control" placeholder="请填写评论">
-<!--            {% if (question != null) %}-->
-<!--            <input type="hidden" name="question_id" value="{{ question.id }}">-->
-<!--            {% endif %}-->
+            {% if (question != null) %}
+            <input type="hidden" name="question_id" value="{{ question.id }}">
+            {% endif %}
         </div>
         <div class="form-group" style="text-align: right;">
             <button class="btn btn-primary">立即评论</button>
